[project]
name = "astro-radio-streamer"
version = "0.1.0"
description = "High-Throughput Telemetry Ingestion Simulator"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["asyncpg>=0.30"]

[project.scripts]
astro-receiver = "astro_radio_streamer.receiver.__main__:main"
astro-fuzzer = "astro_radio_streamer.fuzzer:main"

[dependency-groups]
dev = ["pytest>=8.4", "pytest-asyncio>=0.26", "pytest-cov>=6.1", "ruff>=0.11", "mypy>=1.15", "boofuzz>=0.4"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["astro_radio_streamer"]

[tool.coverage.report]
show_missing = true
fail_under = 90
